<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="executarMusicaArquivo"
        android:text="@string/executar_musica_arquivo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="executarMusicaUrl"
        android:text="@string/executar_musica_url" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="executarVideo"
        android:text="@string/executar_video" />

    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="parar"
            android:text="@string/parar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="executar"
            android:text="@string/executar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pausar"
            android:text="@string/pausar" />
    </TableRow>

    <VideoView android:id="@+id/videoView" />

</TableLayout>